[package]
name = "Rweb_music_player"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
lofty = "0.22.4"
rand = "0.9.2"
rfd = "0.16.0"
rodio = "0.19.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name = "Rweb_music_player"
path = "src/main.rs"

